# log8415-tp2

./: .gitignore  README.md  orchestrator_ip.txt  pyproject.toml  scripts.sh
.docker/: app.Dockerfile  bench.Dockerfile  orchestrator.Dockerfile  worker.Dockerfile  worker.docker-compose.yml
app/: __init__.py
bench/: __main__.py  analysis.py  config.py  scenario.py  scenarios.py  utils.py
deploy/: __main__.py  bootstrap.py  cleanup.py  config.py  infra.py  utils.py
orchestrator/: __init__.py  __main__.py  containers.py  utils.py
report/: .gitignore  report.tex
tests/: __main__.py  scenario.py
worker/: __init__.py  __main__.py
