[tool.poetry]
name = "log8415-tp2"
version = "0.1.0"
description = ""
authors = [
    "NextFire <git@yuru.moe>",
    "quentinguidee <contact@quentinguidee.dev>",
    "aurpur <ikamaaurel@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.31.0"

[tool.poetry.group.deploy.dependencies]
boto3 = "^1.28.50"
paramiko = "^3.3.1"
backoff = "^2.2.1"

[tool.poetry.group.orchestrator.dependencies]
flask = "^2.3.3"
gunicorn = "^21.2.0"

[tool.poetry.group.worker.dependencies]
flask = "^2.3.3"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["essential"], version = "^1.28.50"}
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
